<resources>
    <string name="app_name">Where To Next?</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_phrases">Favorite Phrases</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="app_navigation">APP NAVIGATION</string>
    <string name="map">Map</string>
    <string name="network">NETWORK</string>
    <string name="friends">Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="share">Share</string>
    <string name="other_actions">OTHER ACTIONS</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_for_an_account">Sign up for an account!</string>
</resources>